--- a/src/app-ui/CountryCityModal/CountryCityModal.scss
+++ b/src/app-ui/CountryCityModal/CountryCityModal.scss
@@ -4,7 +4,7 @@
     padding: 0 !important;
 
     .modal-content {
-      box-shadow: 0 0 0 1px rgba($color: grey, $alpha: 0.4);
+      box-shadow: 0 0 0 1px $shadow-color;
       border-radius: 16px;
       max-width: 660px;
       display: flex;
@@ -45,7 +45,7 @@
     }
     .header {
       height: 60px;
-      box-shadow: 0 8px 8px -8px gray;
+      box-shadow: 0 8px 8px -8px $shadow-color;
       font-size: $font-size-lg;
       display: flex;
       justify-content: center;
@@ -114,7 +114,7 @@
       justify-content: center;
       padding-top: 1em;
       padding-bottom: 1em;
-      box-shadow: 0 -8px 8px -8px rgba($color: grey, $alpha: 0.4);
+      box-shadow: 0 -8px 8px -8px $shadow-color;
     }
   }
 
