--- a/src/app-ui/JobDetails/_JobDetails.scss
+++ b/src/app-ui/JobDetails/_JobDetails.scss
@@ -243,7 +243,7 @@
         list-style: none;
         display: flex;
         flex-direction: column;
-        box-shadow: 0 0 16px rgba(0, 0, 0, 0.3);
+        box-shadow: 0 0 16px $shadow-color;
         border-radius: 10px;
         padding: 0px;
         min-width: 250px;
