--- a/src/app-ui/devComponents/ExpModalForm/_ExpForm.scss
+++ b/src/app-ui/devComponents/ExpModalForm/_ExpForm.scss
@@ -26,7 +26,7 @@
       border: solid 1px $border-color;
       outline: none;
       height: 200px;
-      box-shadow: 0 0 16px #00000046;
+      box-shadow: 0 0 16px $shadow-color;
       border-radius: 25px;
       padding: 20px 25px;
       resize: none;
