--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -14,6 +14,7 @@ $font-bold: "Gordita-Bold";
 $font-light: "Gordita-Light";
 $font-medium: "Gordita-Regular";
 $font-subtitle: "Gordita-Medium";
+$shadow-color: #d4d4d4;
 
 //font-sizes
 $font-size-x-lg: 40px;
