--- a/src/shared-ui/Button/_Buttons.scss
+++ b/src/shared-ui/Button/_Buttons.scss
@@ -74,27 +74,12 @@
   }
 
   &.light {
-    background: linear-gradient(
-      90deg,
-      rgba(2, 0, 36, 1) 0%,
-      rgba(106, 210, 89, 1) 0%,
-      rgba(0, 176, 250, 1) 100%
-    );
+    background: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, rgba(106, 210, 89, 1) 0%, rgba(0, 176, 250, 1) 100%);
     &:hover {
-      background: linear-gradient(
-        90deg,
-        rgba(2, 0, 36, 1) 0%,
-        rgba(106, 210, 89, 1) 0%,
-        rgba(0, 176, 250, 1) 100%
-      );
+      background: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, rgba(106, 210, 89, 1) 0%, rgba(0, 176, 250, 1) 100%);
     }
     &:focus {
-      background: linear-gradient(
-        90deg,
-        rgba(2, 0, 36, 1) 0%,
-        rgba(106, 210, 89, 1) 0%,
-        rgba(0, 176, 250, 1) 100%
-      );
+      background: linear-gradient(90deg, rgba(2, 0, 36, 1) 0%, rgba(106, 210, 89, 1) 0%, rgba(0, 176, 250, 1) 100%);
     }
     color: $white;
   }
@@ -134,7 +119,7 @@
 
   &.shadowed {
     background: $white;
-    box-shadow: 0 0 16px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 0 16px $shadow-color;
     span {
       color: $text-color;
     }
@@ -165,7 +150,7 @@
 
   &.shadowed {
     background: $white;
-    box-shadow: 0 0 16px rgba(0, 0, 0, 0.3);
+    box-shadow: 0 0 16px $shadow-color;
     span {
       color: $text-color;
     }
