--- a/src/app-ui/JobDetails/_JobDetails.scss
+++ b/src/app-ui/JobDetails/_JobDetails.scss
@@ -50,6 +50,7 @@
       }
 
       .job-info {
+        flex: 1;
         display: flex;
         justify-content: center;
         align-items: flex-start;
@@ -112,7 +113,7 @@
         button {
           margin: 0px 0px;
           width: 120px;
-          margin-right: 5px;
+          margin-right: 15px;
           font-size: 12px;
           a {
             font-size: 12px;
