--- a/src/features/jobs/_Responsive.scss
+++ b/src/features/jobs/_Responsive.scss
@@ -58,6 +58,7 @@
         padding: 15px 11px;
       }
       .find-jobs-section {
+        min-height: unset;
         .jobs-filter-header-secrion {
           flex-grow: 1;
           padding: 0 20px 0 0;
@@ -93,6 +94,7 @@
 
       .find-jobs-section {
         flex-grow: 1;
+        min-width: unset;
       }
       .job-details {
         position: absolute;
