--- a/src/shared-ui/JobCard/_JobCard.scss
+++ b/src/shared-ui/JobCard/_JobCard.scss
@@ -54,10 +54,12 @@
         justify-content: space-between;
         align-items: flex-start;
         // height: 40px;
+        flex-grow: 1;
 
         .title-row {
           display: flex;
           align-items: center;
+          width: 100%;
 
           .title {
             font-size: 12px;
@@ -99,9 +101,10 @@
       display: flex;
       flex-direction: column;
       align-items: flex-end;
-      justify-content: flex-end;
+      justify-content: flex-start;
       height: 100%;
       align-self: flex-end;
+      padding-top: 15px;
       p,
       a {
         // font-family: $font-light !important;
@@ -252,6 +255,14 @@
   .c-job-card {
     .job-card-first-container {
       flex-direction: column;
+      position: relative;
+    }
+    .more-info {
+      position: absolute;
+      top: 0;
+      right: 0;
+      height: fit-content !important;
+      min-height: fit-content;
     }
   }
   .job-thumbnail {
