--- a/src/app-ui/JobDetails/_JobDetails.scss
+++ b/src/app-ui/JobDetails/_JobDetails.scss
@@ -1,5 +1,9 @@
 @import "../../assets/scss/variables";
-
+.small-text-common {
+  color: $white;
+  font-size: $font-size-md-sm;
+  margin: 0;
+}
 .c-job-detail-card {
   .header {
     z-index: 1;
@@ -9,6 +13,39 @@
     justify-content: space-between;
     padding: 30px;
     align-items: flex-end;
+    .company-details-wrapper {
+      gap: 20px;
+      flex-direction: column-reverse;
+    }
+    .display-flex {
+      display: flex;
+      align-items: flex-end;
+    }
+    .company-details {
+      padding-left: 10px;
+      height: max-content;
+      p {
+        margin: 0;
+      }
+      &.center {
+        display: flex;
+        align-items: flex-start;
+      }
+      .company-name {
+        font-size: $font-size-lg;
+        color: $white;
+        font-family: $font-bold;
+      }
+      .company-type {
+        font-size: $font-size-x-sm;
+        color: $white;
+      }
+    }
+    .company-category {
+      color: $light-grey;
+      font-weight: lighter;
+      font-size: $font-size-sm;
+    }
     .back-btn {
       display: none;
     }
@@ -40,6 +77,26 @@
       align-items: center;
       max-width: 550px;
       flex-wrap: wrap;
+      .company-details {
+        padding-left: 10px;
+        height: max-content;
+        p {
+          margin: 0;
+        }
+        &.center {
+          display: flex;
+          align-items: flex-start;
+        }
+        .company-name {
+          font-size: $font-size-lg;
+          color: $white;
+          font-family: $font-bold;
+        }
+        .company-type {
+          font-size: $font-size-x-sm;
+          color: $white;
+        }
+      }
 
       .job-img {
         width: 100px;
