responsive job banner

--- a/src/app-ui/JobDetails/_Responsive.scss
+++ b/src/app-ui/JobDetails/_Responsive.scss
@@ -1,5 +1,23 @@
 @media screen and (max-width: 1400px) {
+  .small-text-common {
+    text-overflow: ellipsis;
+    overflow: hidden;
+    white-space: nowrap;
+    width: 50%;
+  }
   .c-job-detail-card {
+    .header {
+      .job-info-wrapper {
+        justify-content: flex-start;
+        width: unset;
+        .company-details {
+          width: 300px;
+        }
+      }
+      .company-details-wrapper {
+        width: 230px;
+      }
+    }
     .job-details-wrapper {
       .details-header {
         flex-direction: column-reverse;
@@ -21,12 +39,27 @@
       .job-info-wrapper {
         justify-content: center;
         text-align: center;
+        .company-details {
+          width: 335px;
+          h1 {
+            display: flex;
+            justify-content: flex-start;
+          }
+          .small-text-common {
+            display: flex;
+            justify-content: flex-start;
+            width: 100%;
+          }
+        }
         .job-info {
           align-items: center;
           .job-sector {
             margin-bottom: 5px;
           }
         }
+      }
+      .company-details-wrapper {
+        gap: 0px;
       }
     }
     .job-details-wrapper .content-box.first {
@@ -65,6 +98,9 @@
 }
 
 @media screen and (max-width: 768px) {
+  .small-text-common {
+    width: 100%;
+  }
   .c-job-detail-card {
     .header {
       top: 0px;
@@ -146,5 +182,26 @@
     padding: 15px 11px !important;
     height: 100% !important;
     margin-top: 15px !important;
+  }
+}
+@media screen and (min-width: 1044px) and (max-width: 1180px) {
+  .c-job-detail-card {
+    .header {
+      flex-wrap: wrap;
+      .company-details-wrapper {
+        gap: 0px;
+      }
+      .display-flex {
+        align-items: flex-start;
+      }
+      .job-info-wrapper {
+        .company-details {
+          width: unset;
+          .small-text-common {
+            width: 100%;
+          }
+        }
+      }
+    }
   }
 }
