--- a/src/app-ui/JobDetails/_JobDetails.scss
+++ b/src/app-ui/JobDetails/_JobDetails.scss
@@ -1,4 +1,4 @@
-@import "../../assets/scss/variables";
+@import '../../assets/scss/variables';
 .small-text-common {
   color: $white;
   font-size: $font-size-md-sm;
@@ -182,13 +182,13 @@
         width: 18px;
       }
       .following-icon {
-        background-image: url("./../../assets/images/icons/following-blue-icon.svg");
+        background-image: url('./../../assets/images/icons/following-blue-icon.svg');
         background-repeat: no-repeat;
         background-size: 100%;
         background-position: center;
       }
       .c-button:hover > .following-icon {
-        background-image: url("./../../assets/images/icons/following-white-icon.svg") !important;
+        background-image: url('./../../assets/images/icons/following-white-icon.svg') !important;
         background-repeat: no-repeat;
         background-size: 100%;
         background-position: center;
@@ -226,7 +226,7 @@
             margin-bottom: 10px;
             margin-top: 10px;
             &::after {
-              content: "";
+              content: '';
               position: absolute;
               left: 0;
               top: calc(50% - 2px);
@@ -344,6 +344,18 @@
   .ant-select {
     width: unset !important;
     width: 200px !important;
+  }
+
+  .video-section {
+    display: flex;
+    justify-content: center;
+    .company-profile-video {
+      border-radius: 15px;
+      height: 350px;
+      width: 100%;
+      margin: auto;
+      overflow: hidden;
+    }
   }
 }
 
