--- a/src/app-ui/JobDetails/_JobDetails.scss
+++ b/src/app-ui/JobDetails/_JobDetails.scss
@@ -235,6 +235,25 @@
               background-color: $text-color;
             }
           }
+          .license-tags {
+            display: flex;
+            flex-wrap: wrap;
+            padding: 5px 0;
+            margin: -10px 0 0 0;
+
+            .tags {
+              margin: 10px 10px 0 0;
+              background-color: $white;
+              color: $black;
+              padding: 5px 20px;
+              display: flex;
+              justify-content: center;
+              align-items: center;
+              border-radius: 5px;
+              font-size: $font-size-sm;
+              border: 1px solid $black;
+            }
+          }
 
           .block-title {
             font-size: $font-size-md;
