--- a/src/features/signup/_Responsive.scss
+++ b/src/features/signup/_Responsive.scss
@@ -56,128 +56,257 @@
   }
 }
 
-@media only screen and (max-width: 480px) {
-  .signup-container {
-    background-color: #fff;
-    overflow-y: unset;
-    &.with-form.height-720 {
-      height: unset !important;
-    }
-    &.with-form {
+// @media only screen and (max-width: 480px) {
+//   .signup-container {
+//     background-color: #fff;
+//     overflow-y: unset;
+//     &.with-form.height-720 {
+//       height: unset !important;
+//     }
+//     &.with-form {
+//       background-color: #fff;
+//       height: unset !important;
+//       max-width: 1020px;
+//       width: 100%;
+//       border-radius: 20px;
+//       display: flex;
+//       justify-content: flex-start;
+//       align-items: center;
+//       padding: 0px !important;
+//       height: max-content;
+//       position: relative;
+//       box-shadow: none;
+//     }
+//     .first-container {
+//       display: none !important;
+//     }
+//     .second-container {
+//       width: 100%;
+//       // padding: 2em 1em !important;
+//       padding: 1em 16px !important;
+//       .responsive-bottom-section {
+//         justify-content: center !important;
+//         // max-width: 300px;
+//         margin: 0 auto;
+//       }
+
+//       .c-row {
+//         justify-content: space-evenly;
+//         flex-wrap: wrap;
+//       }
+//       .create-profile-button {
+//         margin: 20px !important;
+//       }
+//       .c-input {
+//         width: 100% !important;
+//       }
+//       &.employer-sign-up {
+//         display: flex;
+//         padding: 40px;
+//         align-items: unset;
+//         margin-bottom: 8rem;
+
+//         .ant-select {
+//           width: 100% !important;
+//         }
+//         .next-btn {
+//           margin: 0 auto;
+//           padding: 5px 46px;
+//         }
+//         .create-new-company {
+//           margin-top: 24px;
+//           margin-bottom: 48px;
+//           text-align: center;
+//           .create-new-btn {
+//             color: #5271ff;
+//             cursor: pointer;
+//           }
+//         }
+//         .second-step {
+//           padding: 40px 0;
+//           position: relative;
+//           display: flex;
+//           align-items: center;
+//           .header {
+//             position: absolute;
+//             top: 0;
+//             .back-btn {
+//               width: 40px;
+//               margin-top: 0px !important;
+//             }
+//           }
+
+//           .c-input {
+//             width: 100%;
+//             .react-tel-input {
+//               width: 100%;
+//             }
+//           }
+//         }
+//         .third-step {
+//           // padding: 40px 0;
+//           // position: relative;
+//           // display: flex;
+//           // align-items: center;
+//           .header {
+//             position: absolute;
+//             top: 0;
+//             .back-btn {
+//               width: 40px;
+//               margin-top: 0px !important;
+//             }
+//           }
+//         }
+//       }
+//     }
+//     .c-form {
+//       height: fit-content;
+//       .form-actions {
+//         display: flex;
+//         flex-wrap: wrap;
+//         justify-content: center;
+
+//         button:last-of-type {
+//           margin-top: 16px;
+//           margin-left: 0;
+//         }
+//       }
+//     }
+//   }
+//   .react-tel-input {
+//     max-width: 400px;
+//     width: 100%;
+//     .form-control {
+//       width: calc(100% - 60px);
+//     }
+//   }
+// }
+
+@media only screen and (max-width: 767px) {
+  .c-container {
+    padding: 20px 0 20px 0 !important;
+    .signup-container {
       background-color: #fff;
-      height: unset !important;
-      max-width: 1020px;
-      width: 100%;
-      border-radius: 20px;
-      display: flex;
-      justify-content: flex-start;
-      align-items: center;
-      padding: 0px !important;
-      height: max-content;
-      position: relative;
-      box-shadow: none;
-    }
-    .first-container {
-      display: none !important;
-    }
-    .second-container {
-      width: 100%;
-      // padding: 2em 1em !important;
-      padding: 1em 16px !important;
-      .responsive-bottom-section {
-        justify-content: center !important;
-        // max-width: 300px;
-        margin: 0 auto;
+      overflow-y: unset;
+      &.with-form.height-720 {
+        height: unset !important;
       }
-
-      .c-row {
-        justify-content: space-evenly;
-        flex-wrap: wrap;
-      }
-      .create-profile-button {
-        margin: 20px !important;
-      }
-      .c-input {
-        width: 100% !important;
-      }
-      &.employer-sign-up {
+      &.with-form {
+        background-color: #fff;
+        height: unset !important;
+        max-width: 1020px;
+        width: 100%;
+        border-radius: 20px;
         display: flex;
-        padding: 40px;
-        align-items: unset;
-        margin-bottom: 8rem;
+        justify-content: flex-start;
+        align-items: center;
+        padding: 0px !important;
+        height: max-content;
+        position: relative;
+        box-shadow: none;
+      }
+      .first-container {
+        display: none !important;
+      }
+      .second-container {
+        width: 100%;
+        // padding: 2em 1em !important;
+        padding: 1em 16px !important;
+        .responsive-bottom-section {
+          justify-content: center !important;
+          // max-width: 300px;
+          margin: 0 auto;
+        }
 
-        .ant-select {
+        .c-row {
+          justify-content: space-evenly;
+          flex-wrap: wrap;
+        }
+        .create-profile-button {
+          margin: 20px !important;
+        }
+        .c-input {
           width: 100% !important;
         }
-        .next-btn {
-          margin: 0 auto;
-          padding: 5px 46px;
-        }
-        .create-new-company {
-          margin-top: 24px;
-          margin-bottom: 48px;
-          text-align: center;
-          .create-new-btn {
-            color: #5271ff;
-            cursor: pointer;
-          }
-        }
-        .second-step {
-          padding: 40px 0;
-          position: relative;
+        &.employer-sign-up {
           display: flex;
-          align-items: center;
-          .header {
-            position: absolute;
-            top: 0;
-            .back-btn {
-              width: 40px;
-              margin-top: 0px !important;
+          padding: 40px;
+          align-items: unset;
+          margin-bottom: 8rem;
+
+          .ant-select {
+            width: 100% !important;
+          }
+          .next-btn {
+            margin: 0 auto;
+            padding: 5px 46px;
+          }
+          .create-new-company {
+            margin-top: 24px;
+            margin-bottom: 48px;
+            text-align: center;
+            .create-new-btn {
+              color: #5271ff;
+              cursor: pointer;
             }
           }
+          .second-step {
+            padding: 40px 0;
+            position: relative;
+            display: flex;
+            align-items: center;
+            .header {
+              position: absolute;
+              top: 0;
+              .back-btn {
+                // width: 40px;
+                // margin-top: 0px !important;
+              }
+            }
 
-          .c-input {
-            width: 100%;
-            .react-tel-input {
+            .c-input {
               width: 100%;
+              .react-tel-input {
+                width: 100%;
+              }
             }
           }
-        }
-        .third-step {
-          // padding: 40px 0;
-          // position: relative;
-          // display: flex;
-          // align-items: center;
-          .header {
-            position: absolute;
-            top: 0;
-            .back-btn {
-              width: 40px;
-              margin-top: 0px !important;
+          .third-step {
+            // padding: 40px 0;
+            // position: relative;
+            // display: flex;
+            // align-items: center;
+            .header {
+              position: absolute;
+              top: 0;
+              .back-btn {
+                // width: 30px;
+                // margin-top: 0px !important;
+              }
             }
           }
         }
       }
-    }
-    .c-form {
-      height: fit-content;
-      .form-actions {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: center;
+      .c-form {
+        height: fit-content;
+        .form-actions {
+          display: flex;
+          flex-wrap: wrap;
+          justify-content: center;
 
-        button:last-of-type {
-          margin-top: 16px;
-          margin-left: 0;
+          button:last-of-type {
+            margin-top: 16px;
+            margin-left: 0;
+          }
         }
       }
     }
-  }
-  .react-tel-input {
-    max-width: 400px;
-    width: 100%;
-    .form-control {
-      width: calc(100% - 60px);
+    .react-tel-input {
+      max-width: 400px;
+      width: 100%;
+      .form-control {
+        width: calc(100% - 60px);
+      }
     }
   }
 }
