Gap between filters set, SERVICES page remove for now, Scroll size minimized

--- a/src/app-ui/JobDetails/_Responsive.scss
+++ b/src/app-ui/JobDetails/_Responsive.scss
@@ -146,7 +146,8 @@
       }
     }
     .job-details-wrapper {
-      padding: 15px 0px !important;
+      padding: 0em !important;
+      padding-top: 1em !important;
       span.content-box {
         padding: 0px 10px 0px 10px !important;
         .content-section {
@@ -182,6 +183,12 @@
     padding: 15px 11px !important;
     height: 100% !important;
     margin-top: 15px !important;
+  }
+  .c-job-detail-card .header .job-info-wrapper {
+    align-items: flex-start;
+    span {
+      padding-left: 0px;
+    }
   }
 }
 @media screen and (min-width: 1044px) and (max-width: 1180px) {
