--- a/src/app-ui/JobFilter/_JobFilter.scss
+++ b/src/app-ui/JobFilter/_JobFilter.scss
@@ -125,7 +125,9 @@
       border-color: #eee;
     }
 
-    .ant-select-show-search.ant-select:not(.ant-select-customize-input) .ant-select-selector input {
+    .ant-select-show-search.ant-select:not(.ant-select-customize-input)
+      .ant-select-selector
+      input {
       cursor: unset;
       visibility: unset;
     }
@@ -135,10 +137,10 @@
     padding: 0 45px !important;
     padding-bottom: 20px !important;
     display: flex !important;
-    justify-content: space-between !important;
+    justify-content: flex-end !important;
 
     button {
-      background: linear-gradient(90deg, #020024 0%, #6ad259 0%, #00b0fa 100%) !important;
+      // background: linear-gradient(90deg, #020024 0%, #6ad259 0%, #00b0fa 100%) !important;
     }
   }
 }
@@ -178,9 +180,14 @@
     }
   }
   .filter-cell {
+    display: flex;
+    align-items: center;
     .switches {
       display: inline-flex !important;
       flex-direction: row !important;
+    }
+    p {
+      margin-right: 10px;
     }
   }
   .ant-form-item-label {
@@ -201,3 +208,15 @@
     }
   }
 }
+
+// @keyframes spin {
+//   0% {
+//     transform: rotate(0deg);
+//   }
+//   100% {
+//     transform: rotate(359deg);
+//   }
+// }
+// #star svg {
+//   animation: spin 1s linear forwards;
+// }
