--- a/src/features/shareJobDetails/_ShareJobDetails.scss
+++ b/src/features/shareJobDetails/_ShareJobDetails.scss
@@ -125,7 +125,7 @@
       margin-bottom: 0px;
       margin-right: 20px;
 
-      .job-title {
+      .company-page-heading {
         margin: 0px;
         font-size: 20px !important;
         margin-bottom: 20px;
