last cards issues fixing

--- a/src/features/shareJobDetails/_ShareJobDetails.scss
+++ b/src/features/shareJobDetails/_ShareJobDetails.scss
@@ -415,3 +415,10 @@ button.react-multiple-carousel__arrow.react-multiple-carousel__arrow--left:hover
     }
   }
 }
+
+.company-single-photo {
+  border-radius: 20px;
+  object-fit: contain;
+  width: 100%;
+  height: 100%;
+}
