--- a/src/app-ui/JobDetails/_JobDetails.scss
+++ b/src/app-ui/JobDetails/_JobDetails.scss
@@ -225,7 +225,7 @@
             font-family: $font-subtitle;
             margin-bottom: 10px;
             margin-top: 10px;
-            font-size: $font-size-lg;
+            font-size: $font-size-md;
 
             &::after {
               content: "";
