--- a/src/assets/scss/_variables.scss
+++ b/src/assets/scss/_variables.scss
@@ -49,6 +49,7 @@ $font-size-x-sm: 10px;
 $font-size-md-sm: 11px;
 $font-size-sm: 12px;
 $font-size-md: 14px;
+$font-size-16: 16px;
 $font-size-lg: 20px;
 $font-size-30: 30px;
 $font-size-x-lg: 40px;
