--- a/src/features/shareJobDetails/_ShareJobDetails.scss
+++ b/src/features/shareJobDetails/_ShareJobDetails.scss
@@ -118,12 +118,16 @@
 
     .details-header {
       display: flex;
-      justify-content: space-between;
+      // justify-content: space-between;
       align-items: flex-start;
       flex-wrap: wrap;
       gap: 15px;
       margin-bottom: 0px;
       margin-right: 20px;
+      flex-direction: column-reverse;
+      justify-content: flex-end;
+      // max-width: unset;
+      position: relative;
 
       .company-page-heading {
         margin: 0px;
@@ -154,6 +158,13 @@
         align-items: center;
         // margin-right: 10px;
         // margin: 0 10px 20px 0;
+        width: 100%;
+        // justify-self: flex-end;
+        justify-content: flex-end;
+        position: absolute;
+        top: 0;
+        right: 0;
+
         .apply-btn {
           padding: 9px 32px;
         }
@@ -205,6 +216,7 @@
         display: flex;
         align-items: flex-start;
         justify-content: space-between;
+        position: relative;
         span {
           padding: 0;
         }
@@ -224,8 +236,11 @@
           background-color: #2d2f44;
         }
         .actions-wrapper {
+          position: absolute;
+          top: -10px;
+          right: 0;
           button {
-            margin-bottom: 10px;
+            margin-bottom: 5px;
             width: 140px;
           }
         }
