share button updateand responsive

--- a/src/app-ui/JobDetails/_JobDetails.scss
+++ b/src/app-ui/JobDetails/_JobDetails.scss
@@ -440,3 +440,11 @@ button.react-multiple-carousel__arrow.react-multiple-carousel__arrow--left:hover
     }
   }
 }
+.share-only-mobile {
+  padding-right: 20px;
+}
+.share-only-mobiles {
+  position: absolute;
+  right: 140px;
+  top: -5px;
+}
